--- a/main.ui
+++ b/main.ui
@@ -23,6 +23,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="addButton">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>400</y>
+     <width>201</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Добавить/изменить</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
